<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone" >

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:onClick="onButtonClick"
        android:src="@drawable/cancel" 
        android:contentDescription="@string/cancel"/>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:background="@null"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/instant2DButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="on2DButtonClicked"
            android:text="@string/two_d"/>

        <Button
            android:id="@+id/instant2DRectifiedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="on2DRectifiedButtonClicked"
            android:text="@string/two_drectified"/>

        <Button
            android:id="@+id/instant3DButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="on3DButtonClicked"
            android:text="@string/three_d"/>

        <Button
            android:id="@+id/instant2DSLAMButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="on2DSLAMButtonClicked"
            android:text="@string/two_d_slam"/>

        <Button
            android:id="@+id/instant2DSLAMExtrapolationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="on2DSLAMExtrapolationButtonClicked"
            android:text="@string/two_d_slamsensor"/>
    </LinearLayout>

</RelativeLayout>